src/objects/Transaction_Target__c.object
<CustomObject>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>User Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction Target</label>
    <nameField>
        <displayFormat>TRT-{00000}</displayFormat>
        <label>Transaction Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Target</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>